src/main/java/com/example/friendsletter/errors/LETTER_ERROR_STATUS.java
package com.example.friendsletter.errors;

/**
 * Enum for errors with letters
 */
public enum LETTER_ERROR_STATUS {
    LETTER_NOT_FOUND,
    NOT_PUBLIC,
    EXPIRED,
    HAS_BEEN_READ,
    MESSAGE_NOT_FOUND
}